--- a/app/includes/head.pug
+++ b/app/includes/head.pug
@@ -14,6 +14,7 @@ head
 	// build:css assets/styles/main.css
 	link(rel='stylesheet' href='assets/styles/bootstrap.css')
 	link(rel='stylesheet' href='bower_components/slick-carousel/slick/slick.css')
+	link(rel='stylesheet' href='bower_components/bootstrap-select/dist/css/bootstrap-select.min.css')
 	link(rel='stylesheet' href='bower_components/slick-carousel/slick/slick-theme.css')
 	link(rel='stylesheet' href='bower_components/jQuery.mmenu/dist/css/jquery.mmenu.all.css')
 	link(rel='stylesheet' href='assets/styles/main.css')
