--- a/app/includes/industry-trend.pug
+++ b/app/includes/industry-trend.pug
@@ -1,9 +1,10 @@
-section.industry#industry
+section.section#industry.industry
+		span.slash
 		h3 Industry Trends
 		.container
 			.row
 				.col-xs-6.col-sm-6.col-md-3
-					.text
+					.industry-box
 						h4
 							sup $
 							span
@@ -14,7 +15,7 @@ section.industry#industry
 							br 
 							| Production P/A
 				.col-xs-6.col-sm-6.col-md-3
-					.text
+					.industry-box
 						h4
 							span
 								| 25%
@@ -24,16 +25,16 @@ section.industry#industry
 							br 
 							| 2010 - 2015
 				.col-xs-6.col-sm-6.col-md-3
-					.text
+					.industry-box
 						h4
 							span
-								| 213,17
+								| 13,174
 						p
 							| People employed
 							br 
 							| across the industries
 				.col-xs-6.col-sm-6.col-md-3
-					.text
+					.industry-box
 						h4
 							sup $
 							span
