--- a/app/assets/styles/_style.scss
+++ b/app/assets/styles/_style.scss
@@ -133,7 +133,6 @@
 #consultants {
 	text-align: center;
 	background: white;
-	padding: 70px 0;
 	.slick-list {
 		position: relative;
 		&:after {
@@ -145,7 +144,7 @@
 		    position: absolute;
 		    top: 100px;
 		    transform: translateX(-50%);
-		    width: 89%;
+		    width: 70%;
 
 		}
 		.slick-track {
@@ -154,17 +153,40 @@
 		}
 	}
 	h3 {
-		font-size: 18px;
+		font-size: 24px;
 		margin: 0 0 48px;
 	}
 }
 
 .list-consultants {
-	max-width: 796px;
-	margin: 0 auto; 
+	max-width: 950px;
+	margin: 0 auto 42px; 
 	color: #939598;
-	> div {
+	font-size: 16px;
+	.slick-slide {
 		text-align: center;
+		margin: 0 50px;
+		a:hover {
+			opacity: 1;
+		}
+		
+	}
+	.slick-prev, .slick-next {
+		top: 30%;
+		width: auto;
+		height: auto;
+		&:before {
+			font-size: 45px;
+		}
+	}
+	.slick-next {
+		right: -54px;
+	}
+	.slick-prev {
+		left: -54px;
+	}
+	.slick-list {
+		padding: 10px 0;
 	}
 	.text {
 		position: relative;
@@ -176,30 +198,39 @@
 			background: #58595b;
 			left: 50%;
 			@include translateX(50%);
-			top: -30px;
+			top: -34px;
 			position: absolute;
 		}
 	}
 	.image {
-		width: 196px;
-		height: 196px;
+		width: 190px;
+		height: 190px;
 		overflow: hidden;
 		border-radius: 50%;
-		box-shadow: 0 0 5px rgba(0,0,0,0.4);
-		margin: 0 auto 20px;
+		box-shadow: 0 0 8px rgba(0,0,0,0.22);
+		margin: 0 auto 28px;
 		text-align: center;
+		img {
+			width: 190px;
+			height: 190px;
+		}
 	
 	}
 	.name {
 		font-size: 18px;
 		text-transform: uppercase;
 		color: #1165a6;
-		margin: 12px 0;
+		margin: 12px 0 4px;
 		font-weight: 700;
 	}
 
 	.role {
 		font-weight: bold;
+	}
+
+	.title {
+		font-weight: 600;
+		font-style: italic;
 	}
 
 	img {
@@ -210,29 +241,36 @@
 
 .industry {
 	text-align: center;
-	padding: 80px 0;
+	padding: 70px 0 40px;
 	background: url(../images/industry-bg.png) no-repeat center top;
 	background-size: cover;
 	color: white;
-	.text {
+	font-size: 16px;
+	.container {
+		max-width: 1110px;
+	}
+	.industry-box {
 		text-align: left;
+		margin: 45px 0;
 	}
 	h4 {
-		font-weight: 500;
+		font-weight: 700;
 		font-size: 24px;
 		span {
 			font-size: 50px;
+			margin-right: 10px;
 		}
 		sup {
-			font-size: 24px;
+			top: -16px;
+			font-size: 28px;
 		}
-		padding: 0 0 20px;
+		padding: 0 0 25px;
 		margin: 0 0 20px 0;
 		position: relative;
 		&:after {
 			position: absolute;
 			content:"";
-			width: 100px;
+			width: 32px;
 			height: 1px;
 			background: white;
 			bottom: 0;
@@ -358,6 +396,25 @@
 	}
 }
 
+.more {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	border: 2px solid #ffffff;
+	text-align: center;
+	position: relative;
+	display: inline-block;
+	i {
+		color: white;
+		font-size: 20px;
+		position: absolute;
+		top: 50%;
+		height: 18px;
+		line-height: 16px;
+		left: 50%;
+		@include transform(-50%,-50%);
+	}
+}
 
 
 // help-region
@@ -366,16 +423,28 @@
 	background: url(../images/help-bg.png) no-repeat center top;
 	background-size: cover;
 	color: white;
-
+	padding-bottom: 50px;
 	.nav-tabs {
 		max-width: 1135px;
 		margin: 68px auto 38px;
 	}
 	.text-content {
+		h3 {
+			margin: 87px 0 30px;
+		}
 		ul {
 			margin: 0;
 		}
 		
+	}
+	.col-md-4:nth-child(1) {
+		width: 35.6%;
+	}
+	.col-md-4:nth-child(2) {
+		width: 29.5%
+	}
+	.col-md-4:nth-child(3) {
+		width: 34.9%
 	}
 	.tab-content {
 		max-width: 1472px;
@@ -397,21 +466,50 @@
 		}
 	}
 	.slick-prev, .slick-next {
-		bottom: 60px;
+		bottom: 35px;
 		right: 40px;
 		top: auto;
+		width: auto;
+		height: auto;
 		@include transform(0,0);
+		&:before {
+			color: white;
+		}
 	}
 	.slick-prev {
 		left: auto;
+		z-index: 2;
 		right: 80px;
+	}
+	.img {
+		max-height: 492px;
+	}
+}
+
+.slick-prev, .slick-next {
+	&:before {
+	content:"\f105";
+	display: inline-block;
+	font: normal normal normal 14px/1 FontAwesome;
+	font-size: inherit; // can't have font-size inherit on line above, so need to override
+	text-rendering: auto; // optimizelegibility throws things off #1094
+	-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+	font-size: 40px;
+	opacity: 1;
+	color: #58595b;
+	}
+}
+.slick-prev {	
+	&:before {
+		content:"\f104";
 	}
 }
 
 .help-sticker {
 	.help-slicker-content {
 		position: relative;
-		max-height: 458px;
+		max-height: 492px;
 		text-align: right;
 
 	}
@@ -424,6 +522,41 @@
 		bottom: 80px;
 	}
 	
+}
+
+.contact-info {
+
+	.contact-info-item {
+		display: table;
+		padding: 47px 20px 47px 50px;
+		color: white;
+		background: #1165a6;
+		font-size: 20px;
+		.contact-info-item-left {
+			width: 175px;
+			text-align: center;
+			img {
+				display: inline;
+				width: 86px;
+			}
+			display: table-cell;
+			vertical-align: middle;
+		}
+		.contact-info-item-body {
+			display: table-cell;
+			vertical-align: middle;
+			p {
+				line-height: 1.3;
+				margin-bottom: 15px;
+			}
+		}
+	}
+	.contact-info-item:nth-child(2) {
+		background: #143b86;
+	}
+	.text {
+		min-height: 140px;
+	}
 }
 
 .flex-block {
