--- a/app/includes/bottom.pug
+++ b/app/includes/bottom.pug
@@ -11,12 +11,12 @@
 // bower:js
 script(src='../bower_components/jQuery/dist/jquery.min.js' type='text/javascript' )
 script(src='../bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js' type='text/javascript' )
-script(src='../bower_components/stickyjs/stickyjs.js' type='text/javascript' )
 script(src='../bower_components/slick-carousel/slick/slick.min.js' type='text/javascript' )
 script(src='../bower_components/jQuery.mmenu/dist/js/jquery.mmenu.all.min.js'  type='text/javascript' )
-script(src='../bower_components/masonry/dist/masonry.pkgd.min.js'  type='text/javascript' )
-script(src='https://cdn.jsdelivr.net/jquery.validation/1.15.0/jquery.validate.min.js'  type='text/javascript' )
-script(src='https://cdn.jsdelivr.net/jquery.validation/1.15.0/additional-methods.min.js'  type='text/javascript' )
+script(src='../bower_components/bootstrap-select/dist/js/bootstrap-select.min.js'  type='text/javascript' )
+script(src='../bower_components/jquery-mixitup/dist/mixitup.min.js'  type='text/javascript' )
+script(src='../bower_components/jquery-validation/dist/jquery.validate.min.js'  type='text/javascript' )
+script(src='../bower_components/jquery-validation/dist/additional-methods.min.js'  type='text/javascript' )
 	
 // endbower
 // endbuild
