--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -9,6 +9,6 @@ $icon-font-path: '../fonts/';
 @import "_navigation.scss";
 @import "_footer.scss";
 @import "_component.scss";
-@import "_contact.scss";
+@import "_pages.scss";
 @import "_style.scss";
 @import "_responsive.scss";
