--- a/app/index.pug
+++ b/app/index.pug
@@ -32,7 +32,7 @@ block content
 						div.tab-content
 							div#employers.tab-pane.fade.in.active
 								.row.flex-block
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.help-sticker
 											div
 												.help-slicker-content
@@ -46,7 +46,7 @@ block content
 														img(src="assets/images/help-img01.png" alt="")
 													.text 
 														p Helping build a skilled workforce for Territory businesses
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.text-content
 											h3 I’M LOOKING TO...
 											ul
@@ -65,7 +65,7 @@ block content
 												li
 													a(href="#")
 														| Find skilled workers
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.contact-info
 											.contact-info-item
 												.contact-info-item-left.media-middle
@@ -87,7 +87,7 @@ block content
 
 							div#employees.tab-pane.fade
 								.row.flex-block
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.help-sticker
 											div
 												.help-slicker-content
@@ -101,9 +101,9 @@ block content
 														img(src="assets/images/help-img01.png" alt="")
 													.text 
 														p Helping build a skilled workforce for Territory businesses
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.text-content
-											h3 I’M LOOKING TO...
+											h3 I’M LOOKING TO Tab2
 											ul
 												li 
 													a(href="#")
@@ -120,7 +120,7 @@ block content
 												li
 													a(href="#")
 														| Find skilled workers
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.contact-info
 											.contact-info-item
 												.contact-info-item-left.media-middle
@@ -140,7 +140,7 @@ block content
 															i.fa.fa-angle-right 
 							div#RTOs.tab-pane.fade
 								.row.flex-block
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.help-sticker
 											div
 												.help-slicker-content
@@ -154,9 +154,9 @@ block content
 														img(src="assets/images/help-img01.png" alt="")
 													.text 
 														p Helping build a skilled workforce for Territory businesses
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.text-content
-											h3 I’M LOOKING TO...
+											h3 I’M LOOKING TO Tab3
 											ul
 												li 
 													a(href="#")
@@ -173,7 +173,60 @@ block content
 												li
 													a(href="#")
 														| Find skilled workers
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
+										.contact-info
+											.contact-info-item
+												.contact-info-item-left.media-middle
+													img(class="media-object" src="assets/images/contact01.png" alt="" )
+												.contact-info-item-body
+													.text
+														p Learn more about the value of VET in the workplace.
+														a.more(href="#")
+															i.fa.fa-angle-right
+											.contact-info-item
+												.contact-info-item-left.media-middle
+													img(class="media-object" src="assets/images/contact02.png" alt="")
+												.contact-info-item-body
+													.text
+														p Improve your business.Talk to an Industry Engagement Officer today.
+														a.more(href="#")
+															i.fa.fa-angle-right
+							div#associations.tab-pane.fade
+								.row.flex-block
+									div.col-xs-12.col-md-4.col-sm-12
+										.help-sticker
+											div
+												.help-slicker-content
+													.img
+														img(src="assets/images/help-img01.png" alt="")
+													.text 
+														p Helping build a skilled workforce for Territory businesses
+											div
+												.help-slicker-content
+													.img
+														img(src="assets/images/help-img01.png" alt="")
+													.text 
+														p Helping build a skilled workforce for Territory businesses
+									div.col-xs-12.col-md-4.col-sm-12
+										.text-content
+											h3 I’M LOOKING TO Tab4
+											ul
+												li 
+													a(href="#")
+														| Employ migrant workers
+												li 
+													a(href="#")
+														| Get help with recruitment and retention
+												li 
+													a(href="#")
+														| Find training opportunities for my staff
+												li 
+													a(href="#")
+														| List a job as high demand
+												li
+													a(href="#")
+														| Find skilled workers
+									div.col-xs-12.col-md-4.col-sm-12
 										.contact-info
 											.contact-info-item
 												.contact-info-item-left.media-middle
@@ -193,7 +246,7 @@ block content
 															i.fa.fa-angle-right 
 							div#career-advisors.tab-pane.fade
 								.row.flex-block
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.help-sticker
 											div
 												.help-slicker-content
@@ -207,9 +260,9 @@ block content
 														img(src="assets/images/help-img01.png" alt="")
 													.text 
 														p Helping build a skilled workforce for Territory businesses
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.text-content
-											h3 I’M LOOKING TO...
+											h3 I’M LOOKING TO Tab5
 											ul
 												li 
 													a(href="#")
@@ -226,7 +279,7 @@ block content
 												li
 													a(href="#")
 														| Find skilled workers
-									div.col-xs-12.col-md-4
+									div.col-xs-12.col-md-4.col-sm-12
 										.contact-info
 											.contact-info-item
 												.contact-info-item-left.media-middle
@@ -246,7 +299,8 @@ block content
 															i.fa.fa-angle-right 
 
 
-	section.section.new-block#insights
+	section.section.insights-region#insights
+		.slash.grey.top0
 		.container
 			.row
 				.col-xs-12.col-sm-12
