--- a/app/assets/styles/_style.scss
+++ b/app/assets/styles/_style.scss
@@ -34,76 +34,16 @@
 }
 
 
-.grid-item {
-	width: 30.3333333%;
-	h3 {
-		font-size: 24px;
-	}
-	.image {
-		img {
-			width: 100%;
-		}
-	}
-	.category {
-		a {
-			display: inline-block;
-			padding: 10px;
-			background: #e1641f;
-			color: white;
-			position: relative;
-			top: -20px;
-		} 
-	}
-	.panel-footer {
-		background: none;
-		border: none;
-	}
-	.author {
-		font-weight: 700;
-		font-style: italic; 
-		& + .date {
-			&:before {
-				content :"-";
-				margin: 0 10px;
-				display: inline-block;
-
-			}
-		}
-	}
-}
-.new-block {
-	text-align: center;
-}
 
 .filter-box {
-	margin:   30px 0;
+	margin: 52px 0 30px;
 	text-align: center;
 	.button-filter {
-		
-		a {
-			display: block;
-			padding: 15px 18px;
-			background: white;
-			min-width: 190px;
-			text-align: left;
-			position: relative;
-		}
+
 		ul {
 			a {
 				padding: 5px 18px;
 			}
-		}
-		&:after {
-			content :"";
-			position: absolute;
-			right: 18px;
-			top: 50%;
-			-webkit-transform: translateY(-50%) rotate(-45deg);
-			transform: translateY(-50%) rotate(-45deg);
-			border-left: 1px solid $text-color;
-			border-bottom: 1px solid $text-color;
-			width: 10px;
-			height: 10px;
 		}
 		& + .button-filter {
 			margin-left: 8px;
@@ -113,19 +53,7 @@
 }
 .filter-label {
 	margin: 30px 0;
-}
-.orage {
-	background: #e1641f!important;
-}
-.grey {
-	background: #58595b!important;
-}
-.blue {
-	background: #1165a6!important;
-}
-.light-blue {
-	background: #2189c4!important;
-
+	font-size: 24px;
 }
 
 
@@ -252,6 +180,9 @@
 	.industry-box {
 		text-align: left;
 		margin: 45px 0;
+		p {
+			font-weight: 500;
+		}
 	}
 	h4 {
 		font-weight: 700;
@@ -287,135 +218,6 @@
 
 
 
-// page 404 
-.page-404 {
-	.navbar-header {
-		float: none;
-		height: auto;
-	}
-	#header {
-		background: white;
-		padding: 36px 0;
-	}
-	#header .navbar-brand {
-		margin: 0;
-		float: none; 
-		height: auto;
-		display: block;
-		img {
-			margin: 0 auto;
-		}
-	}
-	.main {
-		position: relative;
-		height: calc(100vh - 122px);
-		background: url(../images/404.png) no-repeat center top;
-		background-size: cover;
-		@include xxs {
-			background-size: auto 100%;
-		}
-	}
-	#content-404 {
-		position: absolute;
-		bottom: 20%;
-		width: 100%;
-		text-align: center;
-		a {
-			color: $brand-color;
-			text-transform: uppercase;
-			font-weight: 700;
-			font-size: 18px;
-			position: relative;
-			&:after {
-				content :"";
-				width: 30%;
-				height: 4px;
-				background: $brand-color;
-				position: absolute;
-				bottom: -20px;
-				left: 50%;
-				@include translateX(-50%);
-			}
-		}
-	}
-}
-
-// page maintain
-.page-maintain {
-	.main {
-		height: 100vh;
-		@include xs {
-			height: 100%;
-		}
-		background: url(../images/maintain-bg.png) no-repeat center top;
-		background-size: cover;
-	}
-	.content {
-		background: none;
-		text-align: right;
-		font-size: 20px;
-		color: white;
-		p:last-child {
-			margin-top: 20px;
-			padding-top: 20px;
-			display: inline-block;
-			border-top: 2px solid rgba(154,154,154,0.3);
-			color: $link-color;
-			text-transform: uppercase;
-			font-size: 18px;
-			font-weight: 700;
-			a {
-				color: $link-color;
-				position: relative;
-				&:after {
-					content :"";
-					width: 40%;
-					height: 4px;
-					background: $brand-color;
-					position: absolute;
-					bottom: -18px;
-					right: 0;
-				}
-			}
-		}
-
-	}
-	.navbar-brand {
-		background: white;
-		float: none;
-		height: auto;
-		padding: 30px 35px;
-		display: inline-block;		
-	}
-	h1 {
-		font-weight: 300;
-		font-size: 32px;
-		padding-bottom: 30px;
-		border-bottom: 2px solid rgba(154,154,154,0.3);
-		margin: 30px 0;
-	}
-}
-
-.more {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	border: 2px solid #ffffff;
-	text-align: center;
-	position: relative;
-	display: inline-block;
-	i {
-		color: white;
-		font-size: 20px;
-		position: absolute;
-		top: 50%;
-		height: 18px;
-		line-height: 16px;
-		left: 50%;
-		@include transform(-50%,-50%);
-	}
-}
-
 
 // help-region
 
@@ -430,7 +232,7 @@
 	}
 	.text-content {
 		h3 {
-			margin: 87px 0 30px;
+			margin: 21% 0 30px;
 		}
 		ul {
 			margin: 0;
@@ -525,7 +327,6 @@
 }
 
 .contact-info {
-
 	.contact-info-item {
 		display: table;
 		padding: 47px 20px 47px 50px;
@@ -559,6 +360,92 @@
 	}
 }
 
-.flex-block {
-	display: flex;
+
+
+//insights section
+.insights-region{
+	.loadmore {
+		margin-top: 50px;
+	}
+}
+.mix[data-bound] {
+            display: none;
+        }
+.grid-masonry {
+	-moz-column-count: 3;
+	-webkit-column-count: 3;
+	column-count: 3;
+	/* -moz-column-gap: 20px;
+	-webkit-column-gap: 20px;
+	column-gap: 20px; */
+	-webkit-backface-visibility: hidden;
+	overflow: hidden;
+	.grid-item {
+		text-align: left;
+		vertical-align: top;
+		width: 100%;
+		padding: 20px 15px;
+		-webkit-backface-visibility: hidden;
+		-webkit-transform-origin: 50% 0;
+		display: inline-block;
+		.panel {
+			margin: 0;
+
+			border-radius: 0;
+			box-shadow: 0 0 6px 2px rgba(0,0,0,0.1);
+		}
+	}
+}
+
+
+.grid-item {
+	font-weight: 500;
+	h3 {
+		font-size: 24px;
+		font-weight: 500;
+		line-height:1.4;
+	}
+	.image {
+		img {
+			width: 100%;
+		}
+	}
+	.tag {
+		a {
+			display: inline-block;
+			padding: 18px 20px;
+			background: #e1641f;
+			color: white;
+			position: relative;
+			font-weight: 700;
+			top: -28px;
+		} 
+	}
+	.panel-body {
+		padding-top: 0;
+		padding-left: 20px;
+			padding-right: 20px;
+		p {
+			line-height: 1.6;
+		}
+	}
+	.image:empty {
+		margin: 0 0 28px;
+	}
+	.panel-footer {
+		background: none;
+		border: none;
+	}
+	.author {
+		font-weight: 700;
+		font-style: italic; 
+		& + .date {
+			&:before {
+				content :"-";
+				margin: 0 10px;
+				display: inline-block;
+
+			}
+		}
+	}
 }
