--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -115,4 +115,7 @@ textarea {
 .top0 {
     top: 0!important;
 }
+button.btn.dropdown-toggle.btn-default,a:hover,a:focus {
+    outline: none!important;
+}
 
