--- a/app/assets/styles/_responsive.scss
+++ b/app/assets/styles/_responsive.scss
@@ -101,13 +101,14 @@
 }
 //responsive 767
 @include xs {
-
+	
 	body {
 		font-size: 12px;
 	}
 	h3, .h3 {
 		font-size: 24px;
 	}
+
 	
 	.section {
 		padding: 30px 0; 
@@ -128,6 +129,9 @@
 			margin: 0;
 		}
 	}
+	//hero section
+
+
 	#hero {
 		height: 345px;
 		display: block;
@@ -158,6 +162,8 @@
 			}
 		}
 	}
+
+
 	.grid-masonry {
 		-moz-column-count: 1;
 		-webkit-column-count: 1;
@@ -178,27 +184,38 @@
 		 .nav-tabs {
 			margin: 40px -20px 10px; 
 			li {
-				min-height: 140px
-			}
-			 a {
-					display: block;
-					padding: 0 30px !important;
-					font-size:   12px;
-					min-width: 100px;
-					img {
-						max-width: 30px;
+				min-height: 140px;
+				&.active {
+					a {
+						margin-top: 15px;
 					}
 				}
-				.slick-next,.slick-prev {
-					top: 20%;
-					bottom: auto;
-					@include transform(0,-50%);
-					left: 20px;
+			}
+			 a {
+				display: block;
+				//padding: 0 30px !important;
+				font-size:   12px;
+				//min-width: 100px;
+				img {
+					max-width: 30px;
 				}
-				.slick-next {
-					left: auto;
-					right: 20px;
+			}
+			.slick-slide {
+				opacity: 0.2;
+				&.slick-active,&.slick-current{
+					opacity:1;
 				}
+			}
+			.slick-next,.slick-prev {
+				top: 20%;
+				bottom: auto;
+				@include transform(0,-50%);
+				left: 20px;
+			}
+			.slick-next {
+				left: auto;
+				right: 20px;
+			}
 		}
 		.tab-pane .text-content ul li {
 			padding: 10px;
@@ -207,6 +224,9 @@
 			margin:  0 0 20px;
 		}
 	}
+
+	// help sticker slick
+
 	.help-sticker {
 		.text {
 			font-size:20px;
@@ -226,6 +246,8 @@
 			right: 20px;
 		}
 	}
+
+	// contact infor
 
 	.contact-info{
 		display: flex;
@@ -257,6 +279,8 @@
 			}
 		}
 	}
+
+	//fiter box
 	.filter-box {
 		margin: 20px 0 ;
 		.bootstrap-select .btn {
@@ -287,6 +311,57 @@
 				font-size: 30px;
 			}
 		}
+	}
+
+	// list-consultants slick-initialized slick-slider
+	#consultants .slick-list:after {
+		width: 100%;
+		top: 80px;
+
+	}
+	.list-consultants.slick-slider {
+		margin-left: -15px;
+		margin-right: -15px;
+		margin-bottom: 20px;
+		.slick-next,.slick-prev{
+			bottom: 0;
+			top: auto;
+			@include transform(0,0);
+		right: 20px;
+		}
+		.slick-prev {
+				left:20px;
+		}
+		.image {
+			img  {
+				width: 100px;
+				height: 100px;
+			}
+			width: 100px;
+			height: 100px;
+		}
+		.consultant-box {
+			padding:35px 0px 0;
+			width: 130px;
+		}
+		 .text {
+			display: none;
+		}
+
+		.slick-current {
+			 .text {
+				display: block;
+				margin-top:52px;
+				* {
+					font-size: 14px;
+				}
+			}
+			.image {
+				-webkit-transform: scale(1.6);
+				transform: scale(1.6);
+			}
+		}
+		
 	}
 	.more {
 		width: 25px;
